--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,10 @@
 
   "name": "Line in",
   "description": "This extension shows comments inline",
-  "version": "0.0",
+  "version": "0.1",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "resources/icon.png",
     "default_popup": "mypopup.html"
   },
   "permissions": [
